deploy/k3s/configMap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: openfindbearings
